# fragmenter

./: .buildinfo  .gitignore  LICENSE  README.md  fragmenter.data.html  fragmenter.html  fragmenter.logging.html  fragmenter.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  fragmenter.data.doctree  fragmenter.doctree  fragmenter.logging.doctree  fragmenter.utils.doctree  index.doctree  modules.doctree
.github/workflows/: docs.yml  release-pypi.yml
_sources/: fragmenter.data.rst.txt  fragmenter.logging.rst.txt  fragmenter.rst.txt  fragmenter.utils.rst.txt  modules.rst.txt
docs_src/: conf.py  index.rst
examples/: debug_fragmentation_example.ipynb  debug_fragmentation_example.py
examples/like-paper/: execute_fragmentation.py  execute_fragmentation_like_paper.py
examples/reproduce-paper/: execute_fragmentation_like_paper.py
examples/sample/: execute_fragmentation.py
src/fragmentation/: __init__.py  __main__.py
src/fragmentation/utils/: _fragmenter.py
src/fragmenter/: __init__.py  __main__.py  _core.py  typing.py
src/fragmenter/data/: __init__.py  _load_json.py
src/fragmenter/data/json/: UNIFAC-ATOMIC-GROUPS.json
src/fragmenter/utils/: __init__.py  _scheme.py
tests/: test_fragmenter.py  test_json.py
